--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <springboot.version>2.6.6</springboot.version>
+        <springboot.admin.version>2.6.2</springboot.admin.version>
         <java.version>1.8</java.version>
         <mysql.version>8.0.11</mysql.version>
         <hutool.version>5.7.17</hutool.version>
@@ -66,6 +67,13 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
                 <version>${springboot.version}</version>
+            </dependency>
+
+            <!-- 监控日志客户端 -->
+            <dependency>
+                <groupId>de.codecentric</groupId>
+                <artifactId>spring-boot-admin-starter-client</artifactId>
+                <version>${springboot.admin.version}</version>
             </dependency>
 
             <!-- websocket -->
